--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 img{
-    height: 500px;
-    width: 500px;
+    height: 300px;
+    width: 300px;
 }
 
 .header{
@@ -21,17 +21,40 @@ img{
     /* font-family: 'Roboto', sans-serif; */
     font-style: italic;
     font-weight: bold;
-    font-size: 50pt;
+    font-size: 30pt;
+}
+
+.logo a{
+    color: #D6000D;
 }
 
 .nav-bar ul{
     display: flex;
     list-style: none;
+    align-items: center;
 }
 
 .nav-bar li{
     display: block;
     padding: 10px;
+}
+
+.nav-bar li a{
+    color: #121212;
+    font-weight: bold;
+}
+
+button{
+    padding: 2px 50px;
+    background-color: #D6000D;
+    border-radius: 6px;
+    border-width: 0;
+    /* box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0; */
+    color: #fff;
+    height: 30px;
+    outline: none;
+    text-align: center;
+    font-weight: bold;
 }
 
 a{
@@ -41,24 +64,84 @@ a{
 .content{
     display: flex;
     justify-content: space-between;
+    margin: 0px 250px 100px;
+    justify-content: space-around;
 }
 
 .not-image{
     display: block;
+    padding-top: 5.5em ;    
+}
+
+.frist{
+    color: #121212;
+    font-weight: bold;
+}
+
+.frist p{
+    margin-bottom: 2em;
+}
+
+.frist strong{
+    color: #D6000D;
+    font-size: 30pt;    
+}
+
+.second{
+    list-style-image: url(/assets/checked.png);
+}
+
+.second li{
+    padding-left: 15px;
+    font-weight: 700;
+}
+
+.contact{
+    margin-top: 3.5em;
+    font-weight: bold;
+}
+
+.contact p{
+    margin-bottom: 0.5em;
+}
+
+.contact input{
+    background-color: #e3e3e3;
+    border-width: 0;
+    padding: 10px 10px;
+    border-radius: 6px;
+    font-weight: 700;
+    width: 180px;
+}
+
+.contact button{
+    padding: 0px;
+    width: 180px;
+}
+
+.content-card{
+    margin: 1em;
 }
 
 .card{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 25px;
-    padding: 20px;
+    padding: 2% 1rem;
     background: #e3e3e3;
+    border-radius: 12px;
+    width: 100%;
+}
+
+.card-text{
+    text-align: justify;
 }
 
 .icon{
     height: 100px;
     width: 100px;
-    margin-right: 25px;
+    margin: 0px 10px;
     border-radius: 50%;
     background: #D6000D;
 }
@@ -68,15 +151,25 @@ a{
     justify-content: space-between;
     color: #FFF;
     background: #121212;
+    padding: 2% 20px 10% 20px;
 }
 
 .item{
-    margin: 20px;
     display: block;
+    margin: 20px;
 }
 
 .item h1{
     font-size: 40px;
+    margin-bottom: 15px;
+}
+
+.item h2{
+    margin-bottom: 15px;
+}
+
+.item p{
+    margin-bottom: 20px ;
 }
 
 .footer img{
