:pen: responsive + card css adjustments

--- a/style.css
+++ b/style.css
@@ -10,11 +10,17 @@ img{
     width: 300px;
 }
 
+.container{
+    width: 100%;
+    height: 100%;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
     padding: 10px 90px;
     align-items: center;
+    width: 100%;
 }
 
 .logo{
@@ -63,14 +69,13 @@ a{
 
 .content{
     display: flex;
-    justify-content: space-between;
-    margin: 0px 250px 100px;
     justify-content: space-around;
+    margin: 0px 250px 100px;
 }
 
 .not-image{
     display: block;
-    padding-top: 5.5em ;    
+    padding-top: 5.5em;
 }
 
 .frist{
@@ -126,21 +131,23 @@ a{
 .card{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     margin: 25px;
-    padding: 2% 1rem;
-    background: #e3e3e3;
+    padding: 1em 1em;
+    background: #E3E3E3;
     border-radius: 12px;
-    width: 100%;
+    width: 800px;
+    height: 120px;
 }
 
 .card-text{
     text-align: justify;
+    width: 80%;
 }
 
 .icon{
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     margin: 0px 10px;
     border-radius: 50%;
     background: #D6000D;
@@ -175,4 +182,68 @@ a{
 .footer img{
     height: 50px;
     width: 50px;
+}
+
+@media only screen and (max-width: 1170px){
+    img{
+        height: 250px;
+        width: 250px;
+    }
+
+    .content{
+        margin: 0px 125px 50px;
+    }
+    
+    .not-image{
+        padding-left: 5em;
+        padding-top: 2.5em;
+    }
+    
+    .frist p{
+        margin-bottom: 1em;
+    }
+    
+    .first strong{
+       font-size: 15pt;
+    }
+
+    .card{
+        height: 150px;
+    }
+
+    .footer img{
+        height: 30px;
+        width: 30px;
+    }
+}
+
+@media only screen and (max-width: 1050px){
+    .card{
+        height: 180px;
+    }
+}
+
+
+@media only screen and (max-width: 950px){
+    .content{
+        margin: 0px 62px 25px;
+    }
+    
+    .not-image{
+        padding-left: 2.5em;
+        padding-top: 1.2em;
+    }
+    
+    .frist p{
+        margin-bottom: 0.5em;
+    }
+
+    .first strong{
+        font-size: 7.5pt;
+   }
+
+   .footer img{
+       height: 25px;
+       width: 25px;
+   }
 }
